--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "apex-ui-slim-dark",
+  "name": "splash-ui",
   "theme": "ui",
   "version": "0.0.0",
-  "description": "Apex monochrome theme UI inspired by iA Writer (slim variant)",
+  "description": "Dark UI theme",
   "keywords": [
-    "apex",
-    "monochrome",
     "ui",
-    "ia",
     "theme",
-    "writer",
     "slim",
-    "dark"
+    "dark",
+    "minimal",
+    "clean"
   ],
-  "repository": "https://github.com/katie7r/apex-ui-slim-dark",
+  "repository": "https://github.com/katie7r/atom-splash-ui",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
