--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "splash-ui",
+  "main": "lib/splash-ui",
   "theme": "ui",
-  "version": "0.0.0",
-  "description": "Dark UI theme",
+  "version": "0.0.1",
+  "description": "Dark UI theme with a splash of color",
   "keywords": [
     "ui",
     "theme",
     "slim",
     "dark",
     "minimal",
-    "clean"
+    "clean",
+    "configurable"
   ],
   "repository": "https://github.com/katie7r/atom-splash-ui",
   "license": "MIT",
